change condition attribute
Changed the condition attribute from 'source' to 'app_name' to support more media players

--- a/Blueprints/theatre_mode.yaml
+++ b/Blueprints/theatre_mode.yaml
@@ -118,7 +118,7 @@ trigger:
 condition:
   - condition: state
     entity_id: media_player.shield
-    attribute: source
+    attribute: app_name
     state: !input apps
  
 action:
