--- a/Blueprints/theatre_mode.yaml
+++ b/Blueprints/theatre_mode.yaml
@@ -36,7 +36,7 @@ blueprint:
       default: 2
       selector:
         number:
-          min: 1
+          min: 0
           max: 10
           step: 1
           mode: slider
@@ -67,9 +67,7 @@ blueprint:
             
 variables:
   scene_uuid_dim: 'ebe235c62de111eda2610242ac120002'
-  scene_playing: !input scene_playing
   scene_entities: "{{ state_attr(scene_playing,'entity_id') }}"
-  media_player: !input media_player
 
 trigger:
   - platform: state
@@ -81,6 +79,7 @@ trigger:
       - "standby"
       - "unknown"
       - "unavailable"
+      - "buffering"
     to: "playing"
     id: create_scene
     for:
